plenary talk + FedPAGE

--- a/i_talks.html
+++ b/i_talks.html
@@ -82,6 +82,11 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 <h1> Future Talks</h1>
 
 <p>
+NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
+Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, 12/2021 (plenary)
+</p>
+
+<p>
   CS Graduate Seminar, KAUST, November 8, 2021 (invited)
 </p>
 
