--- a/i_papers.html
+++ b/i_papers.html
@@ -52,10 +52,16 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [170] Haoyu Zhao, Zhize Li and Peter Richtárik<br>
+          <b>FedPAGE: A fast local stochastic gradient method for communication-efficient federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2108.04755">arXiv</a>] [code: FedPAGE] <br>
+          <br>
+
           [169] Zhize Li and Peter Richtárik<br>
           <b>CANITA: Faster rates for distributed convex optimization with communication compression</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2107.09461">arXiv</a>] <br>
+          [<a href="https://arxiv.org/abs/2107.09461">arXiv</a>] [code: CANITA] <br>
           <br>
 
           [168] 50+ authors<br>
