--- a/i_team.html
+++ b/i_team.html
@@ -104,12 +104,12 @@
           <ul>
             <li>Rafał Szlendak (Warwick), 7/2021-present </li>
             <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 6/2021-present </li>
-            <li> Bokun Wang (University of California, Davis), 5/2020-8/2021</li>
+            <li> <a href="https://scholar.google.com/citations?hl=en&user=H9GqvAYAAAAJ&view_op=list_works&sortby=pubdate">Bokun Wang</a> (University of California, Davis), 5/2020-8/2021</li>
             <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-present </li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 3/2021-8/2021</li>
-            <li> Bokun Wang (University of California, Davis), 9/2020-3/2021</li>
+            <li> <a href="https://scholar.google.com/citations?hl=en&user=H9GqvAYAAAAJ&view_op=list_works&sortby=pubdate">Bokun Wang</a> (University of California, Davis), 9/2020-3/2021</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-3/2021</li>
-            <li> Wenlin Chen (University of Cambridge), 8/2020-9/2020</li>
+            <li> <a href="https://scholar.google.com/citations?user=A4zbE2IAAAAJ&hl=en">Wenlin</a> Chen (University of Cambridge), 8/2020-9/2020</li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 6/2020-11/2020</li>
             <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-6/2020</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-11/2020</li>
