--- a/i_talks.html
+++ b/i_talks.html
@@ -87,7 +87,15 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, 12/
 </p>
 
 <p>
+  SMAP Colloquium, University of Portsmouth, November 10, 2021 (invited)
+</p>
+
+<p>
   CS Graduate Seminar, KAUST, November 8, 2021 (invited)
+</p>
+
+<p>
+  Google Federated Learning and Analytics Workshop, November 8-10, 2021 (invited)
 </p>
 
 <p>
