--- a/i_talks.html
+++ b/i_talks.html
@@ -91,7 +91,7 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, 12/
 </p>
 
 <p>
-  CS Graduate Seminar, KAUST, November 8, 2021 (invited)
+  CS Graduate Seminar, KAUST, November 1, 2021 (invited)
 </p>
 
 <p>
@@ -102,13 +102,19 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, 12/
   <a href="https://meetings2.informs.org/wordpress/anaheim2021/">INFORMS Annual Meeting</a>, Anaheim, California, October 24-27, 2021
 </p>
 
-<p>
-<a href="http://federated-learning.org/fl-icml-2021/">International Workshop on Federated Learning for User Privacy and Data Confidentiality
-in Conjunction with ICML 2021 (FL-ICML'21)</a>, virtual, July 24, 2021 (co-organizer and speaker)
-</p>
+
 
 
 <h1>2021 Talks</h1>
+
+<p>
+[182] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, virtual, July 28, 2021
+</p>
+
+<p>
+[181]  <a href="http://federated-learning.org/fl-icml-2021/">International Workshop on Federated Learning for User Privacy and Data Confidentiality
+in Conjunction with ICML 2021 (FL-ICML'21)</a>, virtual, July 24, 2021 (co-organizer and speaker)
+</p>
 
 <p>
 [180] <a href="https://www.siam.org/conferences/cm/conference/op21"> SIAM Conference on Optimization</a>, virtual, July 20-23, 2021 (invited)
