--- a/index.html
+++ b/index.html
@@ -43,6 +43,25 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+          <h3>August 29, 2021</h3>
+          <h1>Fall 2021 Semester Started</h1>
+          <br>
+
+          The Fall semester has started at KAUST today; I am teaching CS 331: Stochastic Gradient Descent Methods.
+          <br> <br>
+
+          <i>Brief course blurb:</i> Stochastic gradient descent (SGD) in one or another of its many variants is the workhorse method for training modern supervised machine learning models. However, the world of SGD methods is vast and expanding, which makes it hard for practitioners and even experts to understand its landscape and inhabitants. This course is a mathematically rigorous and comprehensive introduction to the field, and is based on the latest results and insights.
+The course develops a convergence and complexity theory for serial, parallel, and distributed variants of SGD, in the strongly convex, convex and nonconvex setup, with randomness coming from sources such as subsampling and compression. Additional topics such as acceleration via Nesterov momentum or curvature information will be covered as well.
+A substantial part of the course offers a unified analysis of a large family of variants of SGD which have so far required different intuitions, convergence analyses, have different applications, and which have been developed separately in various communities. This framework includes methods with and without the following tricks, and their combinations: variance reduction, data sampling, coordinate sampling, arbitrary sampling, importance sampling, mini-batching, quantization, sketching, dithering and sparsification.
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
 
 
 <h3>August 11, 2021</h3>
