--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [171] Majid Jahani, Sergey Rusakov, Zheng Shi, Peter Richtárik, Michael W. Mahoney and Martin Takáč<br>
+          <b>Doubly adaptive scaled algorithm for machine learning using second-order information</b><br>
+          [<a href="https://arxiv.org/abs/2109.05198">arXiv</a>] [code: OASIS] <br>
+          <br>
+
           [170] Haoyu Zhao, Zhize Li and Peter Richtárik<br>
           <b>FedPAGE: A fast local stochastic gradient method for communication-efficient federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
