--- a/index.html
+++ b/index.html
@@ -43,23 +43,49 @@
       <div id="wrapper" class="main">
         <div id="content">
 
-          <h3>August 29, 2021</h3>
-          <h1>Fall 2021 Semester Started</h1>
-          <br>
 
-          The Fall semester has started at KAUST today; I am teaching CS 331: Stochastic Gradient Descent Methods.
-          <br> <br>
 
-          <i>Brief course blurb:</i> Stochastic gradient descent (SGD) in one or another of its many variants is the workhorse method for training modern supervised machine learning models. However, the world of SGD methods is vast and expanding, which makes it hard for practitioners and even experts to understand its landscape and inhabitants. This course is a mathematically rigorous and comprehensive introduction to the field, and is based on the latest results and insights.
+
+<h3>September 11, 2021</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out: </span>
+<a href="hhttps://arxiv.org/abs/2109.05198">"Doubly Adaptive Scaled Algorithm for Machine Learning Using Second-Order Information"</a> -
+joint work with <a href="https://coral.ise.lehigh.edu/maj316/">Majid Jahani</a>, <a href="https://scholar.google.com/citations?user=tdyw7IAAAAAJ&hl=lv">Sergey Rusakov</a>, <a href="https://coral.ise.lehigh.edu/zhs310/">Zheng Shi</a>,
+<a href="https://www.stat.berkeley.edu/~mmahoney/">Michael W. Mahoney</a>, and
+<a href="https://mtakac.com">Martin Takáč</a>.<br>
+<br>
+Abstract: <i> We present a novel adaptive optimization algorithm for large-scale machine learning problems. Equipped with a low-cost estimate of local curvature and Lipschitz smoothness, our method dynamically adapts the search direction and step-size. The search direction contains gradient information preconditioned by a well-scaled diagonal preconditioning matrix that captures the local curvature information. Our methodology does not require the tedious task of learning rate tuning, as the learning rate is updated automatically without adding an extra hyperparameter. We provide convergence guarantees on a comprehensive collection of optimization problems, including convex, strongly convex, and nonconvex problems, in both deterministic and stochastic regimes. We also conduct an extensive empirical evaluation on standard machine learning problems, justifying our algorithm's versatility and demonstrating its strong performance compared to other start-of-the-art first-order and second-order methods.
+</i>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>August 29, 2021</h3>
+<h1>Fall 2021 Semester Started</h1>
+<br>
+
+The Fall semester has started at KAUST today; I am teaching CS 331: Stochastic Gradient Descent Methods.
+<br> <br>
+
+<i>Brief course blurb:</i> Stochastic gradient descent (SGD) in one or another of its many variants is the workhorse method for training modern supervised machine learning models. However, the world of SGD methods is vast and expanding, which makes it hard for practitioners and even experts to understand its landscape and inhabitants. This course is a mathematically rigorous and comprehensive introduction to the field, and is based on the latest results and insights.
 The course develops a convergence and complexity theory for serial, parallel, and distributed variants of SGD, in the strongly convex, convex and nonconvex setup, with randomness coming from sources such as subsampling and compression. Additional topics such as acceleration via Nesterov momentum or curvature information will be covered as well.
 A substantial part of the course offers a unified analysis of a large family of variants of SGD which have so far required different intuitions, convergence analyses, have different applications, and which have been developed separately in various communities. This framework includes methods with and without the following tricks, and their combinations: variance reduction, data sampling, coordinate sampling, arbitrary sampling, importance sampling, mini-batching, quantization, sketching, dithering and sparsification.
-          <br>
+<br>
 
-          <br>
-          <br>
-          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
-          <br>
-          <br>
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
