--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <br>
 
 <span class="important">New paper out: </span>
-<a href="hhttps://arxiv.org/abs/2109.05198">"Doubly Adaptive Scaled Algorithm for Machine Learning Using Second-Order Information"</a> -
+<a href="https://arxiv.org/abs/2109.05198">"Doubly Adaptive Scaled Algorithm for Machine Learning Using Second-Order Information"</a> -
 joint work with <a href="https://coral.ise.lehigh.edu/maj316/">Majid Jahani</a>, <a href="https://scholar.google.com/citations?user=tdyw7IAAAAAJ&hl=lv">Sergey Rusakov</a>, <a href="https://coral.ise.lehigh.edu/zhs310/">Zheng Shi</a>,
 <a href="https://www.stat.berkeley.edu/~mmahoney/">Michael W. Mahoney</a>, and
 <a href="https://mtakac.com">Martin Takáč</a>.<br>
