--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,12 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [172] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
+          <b>Error compensated loopless SVRG, Quartz, and SDCA for distributed optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2109.10049">arXiv</a>] [code: EC-LSVRG, EC-SDCA, EC-Quartz] <br>
+          <br>
+
           [171] Majid Jahani, Sergey Rusakov, Zheng Shi, Peter Richtárik, Michael W. Mahoney and Martin Takáč<br>
           <b>Doubly adaptive scaled algorithm for machine learning using second-order information</b><br>
           [<a href="https://arxiv.org/abs/2109.05198">arXiv</a>] [code: OASIS] <br>
