--- a/i_talks.html
+++ b/i_talks.html
@@ -82,6 +82,10 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 <h1> Future Talks</h1>
 
 <p>
+PhD Course (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria (invited)
+</p>
+
+<p>
 NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
 Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, 12/2021 (plenary)
 </p>
@@ -100,6 +104,10 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, 12/
 
 <p>
   <a href="https://meetings2.informs.org/wordpress/anaheim2021/">INFORMS Annual Meeting</a>, Anaheim, California, October 24-27, 2021
+</p>
+
+<p>
+  Research Seminar, Faculty of Mathematics, Physics and Informatics, Comenius University, Slovakia, October 22, 2021
 </p>
 
 
