--- a/index.html
+++ b/index.html
@@ -45,6 +45,39 @@
 
 
 
+          [172] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
+          <b>Error compensated loopless SVRG, Quartz, and SDCA for distributed optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2109.10049">arXiv</a>] [code: EC-LSVRG, EC-SDCA, EC-Quartz] <br>
+          <br>
+
+
+
+
+
+
+
+
+<h3>September 23, 2021</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out: </span>
+<a href="https://arxiv.org/abs/2109.10049">"Error Compensated Loopless SVRG, Quartz, and SDCA for Distributed Optimization"</a> -
+joint work with <a href="https://qianxunk.github.io">Xun Qian</a>, <a href="https://www.researchgate.net/profile/Hanze-Dong">Hanze Dong</a>, and <a href="http://tongzhang-ml.org">Tong Zhang</a>.<br>
+<br>
+Abstract: <i>
+The communication of gradients is a key bottleneck in distributed training of large scale machine learning models. In order to reduce the communication cost, gradient compression (e.g., sparsification and quantization) and error compensation techniques are often used. In this paper, we propose and study three new efficient methods in this space: error compensated loopless SVRG method (EC-LSVRG), error compensated Quartz (EC-Quartz), and error compensated SDCA (EC-SDCA). Our method is capable of working with any contraction compressor (e.g., TopK compressor), and we perform analysis for convex optimization problems in the composite case and smooth case for EC-LSVRG. We prove linear convergence rates for both cases and show that in the smooth case the rate has a better dependence on the parameter associated with the contraction compressor. Further, we show that in the smooth case, and under some certain conditions, error compensated loopless SVRG has the same convergence rate as the vanilla loopless SVRG method. Then we show that the convergence rates of EC-Quartz and EC-SDCA in the composite case are as good as EC-LSVRG in the smooth case. Finally, numerical experiments are presented to illustrate the efficiency of our methods.
+</i>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>September 11, 2021</h3>
 <h1>New Paper</h1>
