--- a/i_talks.html
+++ b/i_talks.html
@@ -82,12 +82,16 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 <h1> Future Talks</h1>
 
 <p>
+Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+</p>
+
+<p>
 PhD Course (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria (invited)
 </p>
 
 <p>
 NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
-Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, 12/2021 (plenary)
+Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, December 2021 (plenary)
 </p>
 
 <p>
