--- a/i_join.html
+++ b/i_join.html
@@ -32,7 +32,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
-        <li><a href="i_videotalks.html">Video Talks</a></li>        
+        <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -137,11 +137,12 @@
             href="https://cemse.kaust.edu.sa/amcs">AMCS</a> (Applied
           Mathematics &amp; Computational Science), <a
             href="https://cemse.kaust.edu.sa/cs">CS</a> (Computer
-          Science), <a href="https://cemse.kaust.edu.sa/ee">EE</a>
-          (Electrical Engineering) and <a
+          Science), <a href="https://cemse.kaust.edu.sa/ece">ECE</a>
+          (Electrical and Computer Engineering) and <a
             href="https://cemse.kaust.edu.sa/stat">STAT</a>
           (Statistics). My current students study in all of these
-          programs except for EE.<br>
+          programs except for EE. If you have any questions about studies at KAUST, and want to ask a current student,
+          feel free to make use of the <a href="https://cemse.kaust.edu.sa/ask-a-student">KAUST Ask a Student</a> system. <br>
           <br>
 
 
