added KAUST Global Fellowship to my site

--- a/i_join.html
+++ b/i_join.html
@@ -158,7 +158,12 @@
           sent directly to me (if you have letters written for you
           already, feel free to ask your letter writers to send their
           letters to me right away). Should your application get
-          shortlisted, a Skype interview will be arranged.<br>
+          shortlisted, a Zoom interview will be arranged. Funding of these
+          positions comes from my exiting grant(s). Alternatively (or at the same time),
+          you can apply for a postdoc position funded by the <a href="https://kgfp.kaust.edu.sa/home">KAUST
+          Global Fellowship</a> initiative.
+
+           <br>
           <br>
         </div>
         <div style="clear: both;"> </div>
