--- a/i_talks.html
+++ b/i_talks.html
@@ -95,6 +95,10 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, Dec
 </p>
 
 <p>
+Data Science Seminar, University of Tartu, Estonia, November 18, 2021 (invited)
+</p>
+
+<p>
   SMAP Colloquium, University of Portsmouth, November 10, 2021 (invited)
 </p>
 
