--- a/i_talks.html
+++ b/i_talks.html
@@ -54,9 +54,7 @@
 of Mathematical Sciences, National University of Singapore, Singapore, August 3-7, 2020 (invited) <span class="important">postponed until August 2022 due to Covid-19</span>
 </p>
 
-<p>
-<a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited) <span class="important">postponed until June 2022 due to Covid-19</span>
-</p>
+
 
 
 <p>
@@ -82,6 +80,10 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 <h1> Future Talks</h1>
 
 <p>
+<a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 13-16, 2022 (invited)
+</p>
+
+<p>
 Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
 </p>
 
@@ -95,7 +97,7 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, Dec
 </p>
 
 <p>
-Data Science Seminar, University of Tartu, Estonia, November 18, 2021 (invited)
+<a href="https://www.cs.ut.ee/en/industry-collaboration/data-science-seminars">Data Science Seminar</a>, University of Tartu, Estonia, November 18, 2021 (invited)
 </p>
 
 <p>
