--- a/i_talks.html
+++ b/i_talks.html
@@ -109,7 +109,11 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, Dec
 </p>
 
 <p>
-  CS Graduate Seminar, KAUST, November 1, 2021 (invited)
+  Computer Science Graduate Seminar, KAUST, November 1, 2021 (invited)
+</p>
+
+<p>
+  Research Seminar, <a href="https://kinit.sk">Kempelen Institute for Intelligent Technologies</a>, Slovakia, October 25, 2021
 </p>
 
 <p>
