--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,23 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [175] Aleksandr Beznosikov, Peter Richtárik, Michael Diskin, Max Ryabinin and Alexander Gasnikov<br>
+          <b>Distributed methods with compressed communication for solving variational inequalities, with theoretical guarantees</b><br>
+          [<a href="https://arxiv.org/abs/2110.03313">arXiv</a>] [code: MASHA1, MASHA2] <br>
+          <br>
+
+          [174] Rafał Szlendak, Alexander Tyurin and Peter Richtárik<br>
+          <b>Permutation compressors for provably faster distributed nonconvex optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2110.03300">arXiv</a>] [code: MARINA] <br>
+          <br>
+
+          [173] Ilyas Fatkhullin, Igor Sokolov, Eduard Gorbunov, Zhize Li and Peter Richtárik<br>
+          <b>EF21 with bells & whistles: practical algorithmic extensions of modern error feedback </b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2110.03294">arXiv</a>] [code: EF21-SGD, EF21-PAGE, EF21-PP, EF21-BC, EF21-HB, EF21-Prox] <br>
+          <br>
+
           [172] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
           <b>Error compensated loopless SVRG, Quartz, and SDCA for distributed optimization</b><br>
           <span class="important">Federated Learning Paper</span><br>
