--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <span class="important">New paper out: </span>
 <a href="https://arxiv.org/abs/2110.03313">"Distributed Methods with Compressed Communication for Solving Variational Inequalities, with Theoretical Guarantees"</a> -
-joint work with <a href="https://anbeznosikov.github.io">Aleksandr Beznosikov</a>, <a href="https://www.hse.ru/en/staff/yhn112">Michael Diskin</a>, <a href="https://www.hse.ru/en/staff/mryabinin">Max Ryabinin</a>,
+joint work with <a href="https://anbeznosikov.github.io">Aleksandr Beznosikov</a>, <a href="https://www.hse.ru/en/staff/yhn112">Michael Diskin</a>, <a href="https://www.hse.ru/en/staff/mryabinin">Max Ryabinin</a> and 
 <a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.<br>
 <br>
 Abstract: <i>
