Kostya's PhD thesis

--- a/i_talks.html
+++ b/i_talks.html
@@ -121,7 +121,7 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, Dec
 </p>
 
 <p>
-  Research Seminar, Faculty of Mathematics, Physics and Informatics, Comenius University, Slovakia, October 22, 2021
+  <a href="https://fmph.uniba.sk/detail-novinky/back_to_page/fakulta-matematiky-fyziky-a-informatiky-uk/article/seminar-zo-strojoveho-ucenia-peter-richtarik-22102021/">Machine Learning Research Seminar</a>, Faculty of Mathematics, Physics and Informatics, Comenius University, Slovakia, October 22, 2021
 </p>
 
 
