--- a/index.html
+++ b/index.html
@@ -157,6 +157,30 @@ The <a href="https://link.springer.com/article/10.1007/s10589-020-00220-z">paper
 <br>
 
 
+<h3>October 4, 2021</h3>
+<h1>Konstantin Mishchenko Defended his PhD Thesis</h1>
+<br>
+
+<a href="https://konstmish.github.io">Konstantin Mishchenko</a> defended his PhD thesis "On Seven Fundamental Optimization Challenges in Machine Learning" today.
+<br> <br>
+
+Having started in Fall 2017 (I joined KAUST in March of the same year), Konstantin is my second PhD student to graduate from KAUST. Konstantin
+has done some absolutely remarkable research, described by the committee (<a href="http://optml.mit.edu">Suvrit Sra</a>, <a href="https://www.math.ucla.edu/~wotaoyin/">Wotao Yin</a>,
+<a href="https://dblp.org/pid/23/2168.html">Lawrence Carin</a>, <a href="http://www.bernardghanem.com">Bernard Ghanem</a> and myself) in the following way:
+"The committee commends Konstantin Mishchenko on his outstanding achievements, including research creativity, depth of technical/mathematical results, volume of published work,
+service to the community, and a particularly lucid presentation and defense of his thesis".
+
+<br> <br>
+Konstantin wrote more than 20 papers and his works attracted more than 500 citations during his PhD. Konstantin's next destination is a postdoctoral fellowship
+position with <a href="https://www.di.ens.fr/~aspremon/">Alexander d'Aspremont</a> and <a href="https://www.di.ens.fr/~fbach/">Francis Bach</a> at INRIA.
+Congratulations, Konstantin!
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 <h3>September 29, 2021</h3>
 <h1>Papers Accepted to NeurIPS 2021</h1>
@@ -223,7 +247,7 @@ Mario Almeida,
 <br>
 <br>
 
-<b> "Moshpit SGD: Communication-Efficient Decentralized Training on Heterogeneous Unreliable Devices"</b>
+<b> 7) "Moshpit SGD: Communication-Efficient Decentralized Training on Heterogeneous Unreliable Devices"</b>
 <a href="https://arxiv.org/abs/2103.03239">[arXiv]</a>  -
 the work of
 <a href="https://www.hse.ru/en/staff/mryabinin">Max Ryabinin</a>,
