fixing deleted summer posts!!!

--- a/i_talks.html
+++ b/i_talks.html
@@ -130,7 +130,7 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, Dec
 <h1>2021 Talks</h1>
 
 <p>
-[182] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, virtual, July 28, 2021
+[182] <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive/2021#h.m3gei59g1ubv">Federated Learning One World Seminar</a>, virtual, July 28, 2021
 </p>
 
 <p>
