--- a/i_papers.html
+++ b/i_papers.html
@@ -729,7 +729,7 @@ src="file:///Users/richtap/Documents/WORK/GitHub/My%20GitHub%20Pages%20website/i
 
           [74] Robert M. Gower, Peter Richtárik and Francis Bach <br>
           <b>Stochastic quasi-gradient methods: variance reduction via Jacobian sketching </b><br>
-          <a href="https://link.springer.com/article/10.1007/s10107-020-01506-0"> Mathematical Programming, 2020 </a> <br>
+          <a href="https://link.springer.com/article/10.1007/s10107-020-01506-0"> Mathematical Programming 188:135–192, 2021 </a> <br>
           [<a href="https://arxiv.org/abs/1805.02632">arXiv</a>] [<a
             href="talks/2018%20Voronovo%20-%20TALK%201.pdf">slides</a>]
           [code: <a href="https://github.com/gowerrobert/StochOpt.jl">JacSketch</a>]
