--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
         <div id="content">
 
 
+          <h3>October 15, 2021</h3>
+          <h1>2 Students Received the 2021 NeurIPS Outstanding Reviewer Award</h1>
+          <br>
+
+        Congratulations to <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> and <a href = "https://konstmish.github.io">Konstantin Mishchenko</a> who received the <a href="https://nips.cc/Conferences/2021/ProgramCommittee">2021 NeurIPS Outstanding Reviewer Award</a> given to the top 8% reviewers, as judged
+        by the conference chairs!
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
 <h3>October 9, 2021</h3>
 <h1>New Paper</h1>
 <br>
