--- a/i_papers.html
+++ b/i_papers.html
@@ -284,7 +284,7 @@
 
           [139] Albert S. Berahas, Majid Jahani, Peter Richtárik, and Martin Takáč<br>
           <b>Quasi-Newton methods for deep learning: forget the past, just sample</b><br>
-          To appear in: Optimization Methods and Software, 2021 <br>
+          <a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2021.1977806">Optimization Methods and Software, 2021</a> <br>
           [<a href="https://arxiv.org/abs/1901.09997v4">arXiv</a>] [code: S-LBFGS, S-LSR1]  <br>
           <br>
 
@@ -1311,7 +1311,7 @@ href="posters/Poster-Minibatch-ICML2013.pdf">poster</a>]
 
 <p> [12] Peter Richtárik, Majid Jahani, Martin Takáč and Selin Damla Ahipasaoglu<br>
 <b>Alternating maximization: unifying framework for 8 sparse PCA formulations and efficient parallel codes</b><br>
-<a href="https://link.springer.com/article/10.1007/s11081-020-09562-3">ptimization and Engineering, 2020</a> <br>
+<a href="https://link.springer.com/article/10.1007/s11081-020-09562-3">Optimization and Engineering 22:1493--1519, 2021</a> <br>
 [<a href="http://arxiv.org/abs/1212.4137">arXiv</a>] [code: <a href="https://code.google.com/p/24am/">24am</a>]
 </p>
 
