--- a/index.html
+++ b/index.html
@@ -44,6 +44,38 @@
         <div id="content">
 
 
+
+          <h3>October 22, 2021</h3>
+          <h1>Talk at "Matfyz"</h1>
+          <br>
+
+      Today at 15:30 I am giving a <a href="https://fmph.uniba.sk/detail-novinky/back_to_page/fakulta-matematiky-fyziky-a-informatiky-uk/article/seminar-zo-strojoveho-ucenia-peter-richtarik-22102021/">talk in the machine learning seminar at "Matfyz"</a>, Comenius University, Slovakia. I will talk about the paper
+      <a href="https://arxiv.org/abs/2106.05203">"EF21: A new, simpler, theoretically better, and practically faster error feedback"</a> which was recently accepted to <a href="https://nips.cc/Conferences/2021">NeurIPS 2021</a> as an <span class="important">oral paper</span>
+      (less than 1% acceptance rate from more than 9000 paper submissions). The paper is joint work with <a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> and
+      <a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin.</a>
+          <br>
+
+          <br>
+          <img alt="" src="imgs/EF21-first-slide.png" width="700" >
+
+          <br>  <br>
+
+          With an extended set of coauthors, we have recently written a follow up paper with many major extensions of the EF21 method; you may wish
+          to look at this as well:
+          <a href="https://arxiv.org/abs/2110.03294">"EF21 with Bells & Whistles: Practical Algorithmic Extensions of Modern Error Feedback".</a> This second paper is joint work with
+          <a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a>, <a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a>,
+           <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>, and <a href="https://zhizeli.github.io">Zhize Li.</a>
+           <br>
+           
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
           <h3>October 15, 2021</h3>
           <h1>2 Students Received the 2021 NeurIPS Outstanding Reviewer Award</h1>
           <br>
