--- a/i_papers.html
+++ b/i_papers.html
@@ -264,6 +264,7 @@
 
           [142] Laurent Condat, Grigory Malinovsky, and Peter Richtárik<br>
           <b>Distributed proximal splitting algorithms with rates and acceleration</b><br>
+          To appear in: Frontiers in Signal Processing, section Signal Processing for Communications, 2021<br>
           <a href="https://opt-ml.org/papers/2020/paper_31.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           <span class="important">Spotlight Talk</span><br>
           [<a href="https://arxiv.org/abs/2010.00952">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_31.png">poster</a>]   <br>
