--- a/index.html
+++ b/index.html
@@ -66,13 +66,33 @@
           <a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a>, <a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a>,
            <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>, and <a href="https://zhizeli.github.io">Zhize Li.</a>
            <br>
-           
+
 
           <br>
           <br>
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
           <br>
           <br>
+
+
+
+          <h3>October 20, 2021</h3>
+          <h1>Paper Accepted to Frontiers in Signal Processing</h1>
+          <br>
+
+      The paper <a href="https://www.frontiersin.org/articles/10.3389/frsip.2021.776825/abstract">"Distributed proximal splitting algorithms with rates and acceleration"</a>, joint work with <a href="https://lcondat.github.io">Laurent Condat</a> and
+      <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>, was accepted to <a href="https://www.frontiersin.org/journals/signal-processing">Frontiers in Signal Processing, section Signal Processing for Communications.</a> The paper is
+      is a part of a special issue ("research topic" in the language of Frontiers) dedicated to <a href="https://www.frontiersin.org/research-topics/21002/distributed-signal-processing-and-machine-learning-for-communication-networks#articles">"Distributed Signal Processing and Machine Learning for Communication Networks".</a>
+          <br>
+
+
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
 
 
 
