--- a/i_team.html
+++ b/i_team.html
@@ -240,7 +240,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
                 Csiba</a> (9/2014<span class="style1" style="width:
-                300px;">–present</span>)<br>
+                300px;">–2017</span>)<br>
             thesis: Data sampling strategies in stochastic
               algorithms for empirical risk minimization<br>
             current position: Team Leader for Algorithms,
@@ -412,41 +412,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
           <ul>
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
-D.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Ahipasaoglu</a> (LSE / SUTD)</li>
+D. Ahipasaoglu</a> (LSE / SUTD)</li>
             <li><a
                 href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel
 
